--- a/app/build.gradle
+++ b/app/build.gradle
@@ -44,11 +44,39 @@ detekt {
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
+    def support_version = '1.1.0-alpha03'
+    def mockito_version = "2.25.0"
+    def retrofit2_version = "2.5.0"
+    def room_version = '2.1.0-alpha05'
+    def dagger_version = "2.21"
+    //kotlin
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
-    implementation 'androidx.appcompat:appcompat:1.0.0-beta01'
-    implementation 'androidx.core:core-ktx:1.1.0-alpha05'
+    //support libraries
+    implementation "androidx.appcompat:appcompat:${support_version}"
+    implementation "androidx.recyclerview:recyclerview:${support_version}"
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
+    //tests
     testImplementation 'junit:junit:4.12'
-    androidTestImplementation 'androidx.test:runner:1.1.0-alpha4'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.0-alpha4'
+    testImplementation "org.mockito:mockito-core:${mockito_version}"
+    testImplementation "org.mockito:mockito-inline:${mockito_version}"
+    androidTestImplementation 'androidx.test:runner:1.1.2-alpha02'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0-alpha02'
+    //retrofit
+    implementation "com.squareup.retrofit2:retrofit:${retrofit2_version}"
+    implementation "com.squareup.retrofit2:converter-gson:${retrofit2_version}"
+    implementation "com.squareup.retrofit2:adapter-rxjava2:$retrofit2_version"
+    //room
+    implementation "androidx.room:room-runtime:${room_version}"
+    kapt "androidx.room:room-compiler:${room_version}"
+    implementation "androidx.room:room-rxjava2:${room_version}"
+    //rx
+    implementation 'io.reactivex.rxjava2:rxkotlin:2.3.0'
+    implementation 'io.reactivex.rxjava2:rxandroid:2.1.0'
+    //dagger
+    implementation "com.google.dagger:dagger-android:${dagger_version}"
+    implementation "com.google.dagger:dagger-android-support:${dagger_version}"
+    kapt "com.google.dagger:dagger-android-processor:${dagger_version}"
+    kapt "com.google.dagger:dagger-compiler:${dagger_version}"
+    //core
+    implementation 'androidx.core:core-ktx:1.1.0-alpha05'
 }
