--- a/app/build.gradle
+++ b/app/build.gradle
@@ -79,4 +79,5 @@ dependencies {
     kapt "com.google.dagger:dagger-compiler:${dagger_version}"
     //core
     implementation 'androidx.core:core-ktx:1.1.0-alpha05'
+    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
 }
