--- a/app/build.gradle
+++ b/app/build.gradle
@@ -49,11 +49,14 @@ dependencies {
     def retrofit2_version = "2.5.0"
     def room_version = '2.1.0-alpha05'
     def dagger_version = "2.21"
+    def arch_version = '2.0.0-beta01'
     //kotlin
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlin_version"
     //support libraries
     implementation "androidx.appcompat:appcompat:${support_version}"
     implementation "androidx.recyclerview:recyclerview:${support_version}"
+    implementation 'androidx.core:core-ktx:1.1.0-alpha05'
+    implementation "androidx.legacy:legacy-support-v4:1.0.0"
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
     //tests
     testImplementation 'junit:junit:4.12'
@@ -77,7 +80,8 @@ dependencies {
     implementation "com.google.dagger:dagger-android-support:${dagger_version}"
     kapt "com.google.dagger:dagger-android-processor:${dagger_version}"
     kapt "com.google.dagger:dagger-compiler:${dagger_version}"
-    //core
-    implementation 'androidx.core:core-ktx:1.1.0-alpha05'
-    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
+    //ViewModel and LiveData
+    implementation "androidx.lifecycle:lifecycle-runtime:${arch_version}"
+    implementation "androidx.lifecycle:lifecycle-extensions:${arch_version}"
+    kapt "androidx.lifecycle:lifecycle-compiler:${arch_version}"
 }
