--- a/app/build.gradle
+++ b/app/build.gradle
@@ -84,4 +84,6 @@ dependencies {
     implementation "androidx.lifecycle:lifecycle-runtime:${arch_version}"
     implementation "androidx.lifecycle:lifecycle-extensions:${arch_version}"
     kapt "androidx.lifecycle:lifecycle-compiler:${arch_version}"
+    implementation 'com.squareup.picasso:picasso:2.5.2'
+    implementation 'com.jakewharton.picasso:picasso2-okhttp3-downloader:1.1.0'
 }
