--- a/app/build.gradle
+++ b/app/build.gradle
@@ -53,8 +53,10 @@ dependencies {
     def retrofit2_version = "2.5.0"
     def room_version = "2.1.0-alpha06"
     def dagger_version = "2.21"
-    def arch_version = "2.0.0-beta01"
+    def arch_version = "2.1.0-alpha03"
     def picasso_version = "2.71828"
+    def rxandroid_version = "2.1.0"
+    def rxkotlin_version = "2.3.0"
     //kotlin
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlin_version"
     //support libraries
@@ -78,8 +80,8 @@ dependencies {
     kapt "androidx.room:room-compiler:${room_version}"
     implementation "androidx.room:room-rxjava2:${room_version}"
     //rx
-    implementation 'io.reactivex.rxjava2:rxkotlin:2.3.0'
-    implementation 'io.reactivex.rxjava2:rxandroid:2.1.0'
+    implementation "io.reactivex.rxjava2:rxkotlin:${rxkotlin_version}"
+    implementation "io.reactivex.rxjava2:rxandroid:${rxandroid_version}"
     //dagger
     implementation "com.google.dagger:dagger-android:${dagger_version}"
     implementation "com.google.dagger:dagger-android-support:${dagger_version}"
